Gaussian elimination with partial pivoting

--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -236,6 +236,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solution obtained by **swapping the positions of two rows**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's generating a matrix `T` and a vector `t` by swapping, respectively, the first two rows of `A` and the first two elements of `y`:"
    ]
   },
@@ -425,6 +432,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solution obtained by **multiplying a row by a nonzero scalar**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, let's generating a matrix `T` and a vector `t` by multiplying, respectively, the second row of `A` and the second element of `y` by `3`"
    ]
   },
@@ -527,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x2 = np.linalg.solve(T,t)"
@@ -548,6 +564,13 @@
    ],
    "source": [
     "print x2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution obtained by **adding to one row a scalar multiple of another**"
    ]
   },
   {
@@ -655,7 +678,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x3 = np.linalg.solve(T,t)"
@@ -682,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the solutions `x`, `x1`, `x2` and `x3`"
+    "### Comparison between the solutions `x`, `x1`, `x2` and `x3`"
    ]
   },
   {
