--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. As pointed out in the previous class, the **pivots** needed for computating the **Gauss multipliers** must be nonzero. The presence of small pivots produces arbitrarily poor results, even for well-conditioned problems, showing that Gauss elimination may be an unstable method (Golub and Van Loan, 2013), depending on the elements of $\\mathbf{A}$."
+    "The [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. As pointed out in the previous class, the **pivots** needed for computing the **Gauss multipliers** must be nonzero. The presence of small pivots produces arbitrarily poor results, even for well-conditioned problems, showing that Gauss elimination may be an unstable method, depending on the elements of $\\mathbf{A}$ (Golub and Van Loan, 2013)."
    ]
   },
   {
@@ -85,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -143,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -166,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -187,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -218,9 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "u = np.array([[1.],\n",
-    "              [0.],\n",
-    "              [0.]])"
+    "u = np.array([1., 0., 0.])"
    ]
   },
   {
@@ -231,9 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [np.dot(P1, A)[1][0]/np.dot(P1, A)[0][0]],\n",
-    "              [np.dot(P1, A)[2][0]/np.dot(P1, A)[0][0]]])"
+    "t = np.array([0., np.dot(P1, A)[1][0]/np.dot(P1, A)[0][0], np.dot(P1, A)[2][0]/np.dot(P1, A)[0][0]])"
    ]
   },
   {
@@ -244,15 +232,13 @@
    },
    "outputs": [],
    "source": [
-    "A1 = (I - t*u.T).dot(np.dot(P1,A))"
+    "A1 = (I - np.outer(t, u)).dot(np.dot(P1,A))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -279,15 +265,13 @@
    },
    "outputs": [],
    "source": [
-    "y1 = (I - t*u.T).dot(np.dot(P1,y))"
+    "y1 = (I - np.outer(t, u)).dot(np.dot(P1,y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -308,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Iteration 2:**"
+    "**Iteration k = 2:**"
    ]
   },
   {
@@ -321,9 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -344,9 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -365,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -389,9 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "u = np.array([[0.],\n",
-    "              [1.],\n",
-    "              [0.]])"
+    "u = np.array([0., 1., 0.])"
    ]
   },
   {
@@ -402,28 +378,24 @@
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [0.],\n",
-    "              [np.dot(P2, A1)[2][1]/np.dot(P2, A1)[1][1]]])"
+    "t = np.array([0., 0., np.dot(P2, A1)[2][1]/np.dot(P2, A1)[1][1]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "B = (I - t*u.T).dot(np.dot(P2, A1))"
+    "B = (I - np.outer(t, u)).dot(np.dot(P2, A1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -450,15 +422,13 @@
    },
    "outputs": [],
    "source": [
-    "z = (I - t*u.T).dot(np.dot(P2, y1))"
+    "z = (I - np.outer(t, u)).dot(np.dot(P2, y1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -485,9 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -503,9 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Solution of the original system:"
    ]
@@ -513,9 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -728,7 +692,7 @@
     "        imax = i + np.argmax(np.abs(C[i:,i]))\n",
     "        if imax != i:\n",
     "            p[i], p[imax] = p[imax], p[i]\n",
-    "    return p, C[p,:]"
+    "        return p, C[p,:]"
    ]
   },
   {
@@ -872,9 +836,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
