--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -53,9 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "y = np.array([[8.],\n",
-    "              [-11.],\n",
-    "              [-3.]])"
+    "y = np.array([8., -11., -3.])"
    ]
   },
   {
@@ -79,17 +77,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -181,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -202,17 +194,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.]\n",
-      " [ 1.]\n",
-      " [ 5.]]\n"
+      "[ 8.  1.  5.]\n"
      ]
     }
    ],
@@ -295,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -316,17 +302,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.]\n",
-      " [ 1.]\n",
-      " [ 1.]]\n"
+      "[ 8.  1.  1.]\n"
      ]
     }
    ],
@@ -362,22 +344,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n",
+      "[ 2.  3. -1.]\n",
       "\n",
       "\n",
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -513,9 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "u = np.array([[1.],\n",
-    "              [0.],\n",
-    "              [0.]])"
+    "u = np.array([1., 0., 0.])"
    ]
   },
   {
@@ -526,9 +500,7 @@
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [A[1][0]/A[0][0]],\n",
-    "              [A[2][0]/A[0][0]]])"
+    "t = np.array([0., A[1][0]/A[0][0], A[2][0]/A[0][0]])"
    ]
   },
   {
@@ -539,15 +511,13 @@
    },
    "outputs": [],
    "source": [
-    "A1 = (I - t*u.T).dot(A)"
+    "A1 = (I - np.outer(t, u)).dot(A)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -574,22 +544,18 @@
    },
    "outputs": [],
    "source": [
-    "y1 = (I - t*u.T).dot(y)"
+    "y1 = (I - np.outer(t, u)).dot(y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8.],\n",
-       "       [ 1.],\n",
-       "       [ 5.]])"
+       "array([ 8.,  1.,  5.])"
       ]
      },
      "execution_count": 20,
@@ -605,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Iteration 2:**"
+    "**Iteration k = 2:**"
    ]
   },
   {
@@ -616,9 +582,7 @@
    },
    "outputs": [],
    "source": [
-    "u = np.array([[0.],\n",
-    "              [1.],\n",
-    "              [0.]])"
+    "u = np.array([0., 1., 0.])"
    ]
   },
   {
@@ -629,28 +593,22 @@
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [0.],\n",
-    "              [A1[2][1]/A1[1][1]]])"
+    "t = np.array([0., 0., A1[2][1]/A1[1][1]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "B = (I - t*u.T).dot(A1)"
+    "B = (I - np.outer(t, u)).dot(A1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -677,22 +635,18 @@
    },
    "outputs": [],
    "source": [
-    "z = (I - t*u.T).dot(y1)"
+    "z = (I - np.outer(t, u)).dot(y1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8.],\n",
-       "       [ 1.],\n",
-       "       [ 1.]])"
+       "array([ 8.,  1.,  1.])"
       ]
      },
      "execution_count": 26,
@@ -714,17 +668,13 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -734,9 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Solution of the original system:"
    ]
@@ -744,23 +692,28 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
    "source": [
     "print np.linalg.solve(A,y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -779,9 +732,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
