gaussian elimination review

--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -155,60 +155,22 @@
     "This transformation is based on three row transformations that do not change the solution of the linear system: **swapping the positions of two rows**, **multiplying a row by a nonzero scalar** and **adding to one row a scalar multiple of another**. All these transformations can be defined as follows:\n",
     "\n",
     "$$\n",
-    "\\mathbf{T} \\mathbf{A} \\mathbf{x} = \\mathbf{T} \\mathbf{y} \\: ,\n",
+    "\\underbrace{\\mathbf{T} \\mathbf{A}}_{\\mathbf{A}^{\\prime}} \\mathbf{x} = \\underbrace{\\mathbf{T} \\mathbf{y}}_{\\mathbf{y}^{\\prime}} \\: ,\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{T}$ is a square matrix representing the desired transformation. Let's define the matrix $\\mathbf{T}$ for each transformation."
+    "where $\\mathbf{T}$ is a square matrix representing the desired transformation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1) swapping the positions of two rows **\n",
-    "\n",
-    "In this case, $\\mathbf{T}$ is defined by swapping two specific lines of the identity matrix. Let's consider, for example, a transformation that swaps the lines $1$ and $3$ of a $5 \\times 5$ matrix $\\mathbf{A}$. In this case, the matrix $\\mathbf{T}$ is given by:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{T} =\n",
-    "\\begin{bmatrix}\n",
-    "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 1 & 0 & 0 & 0 \\\\\n",
-    "1 & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 1 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 1\n",
-    "\\end{bmatrix}\n",
-    "$$"
+    "Let's consider a linear system $\\mathbf{A} \\mathbf{x} = \\mathbf{y}$ given by:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's consider a linear system `Ax = y` given by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -219,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,79 +249,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's generating a matrix `T` and a vector `t` by swapping, respectively, the first two rows of `A` and the first two elements of `y`:"
+    "In this case, $\\mathbf{T}$ is defined by swapping two specific lines of the identity matrix. Let's consider, for example, a transformation that swaps two first lines of the original system. In this case, the matrix $\\mathbf{T}$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{T} =\n",
+    "\\begin{bmatrix}\n",
+    "0 & 1 & 0 \\\\\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "T = A[[1,0,2]]\n",
-    "t = y[[1,0,2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  3.  2.]\n",
-      " [ 7.  4.  9.]\n",
-      " [ 8.  6.  5.]]\n",
-      "\n",
-      "\n",
-      "[[ 7.  4.  9.]\n",
-      " [ 1.  3.  2.]\n",
-      " [ 8.  6.  5.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print A\n",
-    "print '\\n'\n",
-    "print T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5.23  6.45  1.67]\n",
-      "\n",
-      "\n",
-      "[ 6.45  5.23  1.67]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print y\n",
-    "print '\\n'\n",
-    "print t"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This row swapping is equivalent to premultiplying `A` and `y` by a permutation matrix `P` given by"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,25 +277,31 @@
     }
    ],
    "source": [
-    "P = np.identity(3)[[1,0,2]]\n",
-    "print P"
+    "T = np.identity(3)[[1, 0, 2]]\n",
+    "\n",
+    "print T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix $\\mathbf{A}^{\\prime}$ and vector $\\mathbf{y}^{\\prime}$ can be obtained as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "T = np.dot(P,A)\n",
-    "t = np.dot(P,y)"
+    "A_prime = np.dot(T, A)\n",
+    "y_prime = np.dot(T, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,12 +322,12 @@
    "source": [
     "print A\n",
     "print '\\n'\n",
-    "print T"
+    "print A_prime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,30 +344,85 @@
    "source": [
     "print y\n",
     "print '\\n'\n",
-    "print t"
+    "print y_prime"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The solution of the system `Tx = t` is given by:"
+    "Alternatively, $\\mathbf{A}^{\\prime}$ and $\\mathbf{y}^{\\prime}$ can also be obtained by directly swapping the rows of $\\mathbf{A}$ and $\\mathbf{y}$, as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7.  4.  9.]\n",
+      " [ 1.  3.  2.]\n",
+      " [ 8.  6.  5.]]\n",
+      "\n",
+      "\n",
+      "[[ 7.  4.  9.]\n",
+      " [ 1.  3.  2.]\n",
+      " [ 8.  6.  5.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print A_prime\n",
+    "print '\\n'\n",
+    "print A[[1, 0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6.45  5.23  1.67]\n",
+      "\n",
+      "\n",
+      "[ 6.45  5.23  1.67]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y_prime\n",
+    "print '\\n'\n",
+    "print y[[1, 0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution of the system $\\mathbf{A}^{\\prime} \\mathbf{x} = \\mathbf{y}^{\\prime}$ is given by:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "x1 = np.linalg.solve(T,t)"
+    "x1 = np.linalg.solve(A_prime, y_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -476,6 +441,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "which is equal to the solution of the original system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Solution obtained by **multiplying a row by a nonzero scalar**"
    ]
   },
@@ -483,24 +472,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's generating a matrix `T` and a vector `t` by multiplying, respectively, the second row of `A` and the second element of `y` by `3`"
+    "In this case, $\\mathbf{T}$ is defined by multiplying the $i$-th row of the identity matrix by $\\lambda$. Let's consider, for example, a transformation that multiply the second row of the original system by `3`. In this case, the matrix $\\mathbf{T}$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{T} =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 3 & 0 \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  3.  0.]\n",
+      " [ 0.  0.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "T = np.diag([1., 3., 1.])\n",
+    "\n",
+    "print T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix $\\mathbf{A}^{\\prime}$ and vector $\\mathbf{y}^{\\prime}$ can be obtained as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "T = np.dot(np.diag([1.,3.,1.]), A)\n",
-    "t = np.dot(np.diag([1.,3.,1.]), y)"
+    "A_prime = np.dot(T, A)\n",
+    "y_prime = np.dot(T, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -521,12 +547,12 @@
    "source": [
     "print A\n",
     "print '\\n'\n",
-    "print T"
+    "print A_prime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -543,59 +569,30 @@
    "source": [
     "print y\n",
     "print '\\n'\n",
-    "print t"
+    "print y_prime"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that this operation is equivalent to premultiplying `A` and `y` by the matrix"
+    "The solution of the system $\\mathbf{A}^{\\prime} \\mathbf{x} = \\mathbf{y}^{\\prime}$ is given by:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.,  0.],\n",
-       "       [ 0.,  3.,  0.],\n",
-       "       [ 0.,  0.,  1.]])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.diag([1.,3.,1.])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The solution of this system is given by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "x2 = np.linalg.solve(T,t)"
+    "x2 = np.linalg.solve(A_prime, y_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -614,6 +611,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "which is equal to the solution of the original system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Solution obtained by **adding to one row a scalar multiple of another**"
    ]
   },
@@ -621,26 +642,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's generating a matrix `T` by adding the double of the first row of `A` to the third row of `A`. Let's also generating a vector `t` by adding the double of the first element of `y` to the third element of `y`"
+    "In this case, $\\mathbf{T}$ is defined by using a outer product. Let's consider, for example, a transformation that adds to the third row the product of the first row by a constant $\\alpha$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, the $\\mathbf{T}$ can be defined as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{T} = \\mathbf{I} + \\mathbf{t} \\otimes \\mathbf{u}^{\\top} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{I}$ is the identity matrix,\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{u} =\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\ 0 \\\\ 0\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{t} =\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\ 0 \\\\ \\alpha\n",
+    "\\end{bmatrix} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the position of the non-null element of $\\mathbf{u}$ defines the row to be multiplied by the constant $\\alpha$, whereas the position of the constant $\\alpha$ in $\\mathbf{t}$ defines the row in which the addition will be performed.\n",
+    "\n",
+    "Let's consider, for example, the transformation that adds to the second row the first row multiplied by `3`. In this case, the matrix $\\mathbf{T}$ is defined as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "Q = np.diag([1.,1.,1.])\n",
-    "Q[2,0] += 2.\n",
-    "T = np.dot(Q, A)\n",
-    "t = np.dot(Q, y)"
+    "alpha = 3.\n",
+    "t = np.array([0., alpha, 0.])\n",
+    "u = np.array([1., 0., 0.])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.]\n",
+      " [ 3.  1.  0.]\n",
+      " [ 0.  0.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "T = np.identity(3) + np.outer(t, u)\n",
+    "\n",
+    "print T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix $\\mathbf{A}^{\\prime}$ and vector $\\mathbf{y}^{\\prime}$ can be obtained as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A_prime = np.dot(T, A)\n",
+    "y_prime = np.dot(T, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -653,20 +756,20 @@
       "\n",
       "\n",
       "[[  1.   3.   2.]\n",
-      " [  7.   4.   9.]\n",
-      " [ 10.  12.   9.]]\n"
+      " [ 10.  13.  15.]\n",
+      " [  8.   6.   5.]]\n"
      ]
     }
    ],
    "source": [
     "print A\n",
     "print '\\n'\n",
-    "print T"
+    "print A_prime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -676,63 +779,37 @@
       "[ 5.23  6.45  1.67]\n",
       "\n",
       "\n",
-      "[  5.23   6.45  12.13]\n"
+      "[  5.23  22.14   1.67]\n"
      ]
     }
    ],
    "source": [
     "print y\n",
     "print '\\n'\n",
-    "print t"
+    "print y_prime"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that this operation is equivalent to premultiplying `A` and `y` by the matrix"
+    "The solution of the system $\\mathbf{A}^{\\prime} \\mathbf{x} = \\mathbf{y}^{\\prime}$ is given by:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 2.  0.  1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print Q"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The solution of this system is given by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "x3 = np.linalg.solve(T,t)"
+    "x3 = np.linalg.solve(A_prime, y_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -751,12 +828,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "which is equal to the solution of the original system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.70556701  1.34958763  1.44340206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Comparison between the solutions `x`, `x1`, `x2` and `x3`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -821,6 +922,15 @@
    "source": [
     "print x3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
