--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ is called **Gauss transformation**, the vector $\\mathbf{t}^{(k)}$ is called **Gauss vector** and the non-null elements of $\\mathbf{t}^{(k)}$ are called **Gauss multiplies** (Golub and Van Loan, 2013)."
+    "The matrix $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ is called **Gauss transformation**, the vector $\\mathbf{t}^{(k)}$ is called **Gauss vector** and the non-null elements of $\\mathbf{t}^{(k)}$ are called **Gauss multipliers** (Golub and Van Loan, 2013)."
    ]
   },
   {
@@ -599,7 +599,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "B = (I - np.outer(t, u)).dot(A1)"
