Gaussian elimination with partial pivoting

--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -292,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A_prime = np.dot(T, A)\n",
