--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -654,7 +654,8 @@
    "metadata": {},
    "source": [
     "    N = y.size\n",
-    "    C = np.hstack(np.copy(A), np.copy(y))\n",
+    "    assert A.shape[1] == N, 'A columns must be equal to y size'\n",
+    "    C = np.vstack([A.T, y]).T\n",
     "    D = np.identity(N)\n",
     "    \n",
     "    for i = 1:N-1\n",
@@ -699,18 +700,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 14"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement the Gaussian elimination with partial pivoting to calculate the equivalent triangular system. The code must use the outer product function that was implemented in a previous class. The code must receive the matrix `A` and the vector `y` and return the matrix `B` and the vector `z`. The Gauss multipliers must be stored below the diagonal of `B`.\n",
+    "1) In your `my_functions.py` file, create a function that implement the algorithm shown above. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and return two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
     "\n",
-    "2. Use the function implemented in a previous class for solving the equivalent (upper) triangular system `Bx = z`.\n",
+    "2) Create a first test in your `test_my_functions.py` file. For this test, create a linear system and the associated equivalent triangular system (do not use the function implemented in item 1). Then use the function implemented in item 1 to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
     "\n",
-    "3. Use the `code-template.ipynb` to compare your code to `np.linalg.solve(A,y)`."
+    "3) Create a second test in your `test_my_functions.py` file. In this test, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function created in item 1 to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
+    "\n",
+    "4) In your `test_my_functions.py` file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
    ]
   },
   {
@@ -798,26 +801,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 15"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Use your Gauss elimination code for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse, column by column.\n",
+    "1) In your `my_functions.py` file, create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, according to the scheme presented above.\n",
     "\n",
-    "2. Use the `code-template.ipynb` to compare your code to `np.linalg.inv(A)`."
+    "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function created in the previous item and verify if the products dot(A, Ainv) and dot(Ainv, A) are equal to the identity matrix. The second test must compare the inverse matrix computed by using your function and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
